<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.aleksandarx.foodfinder.view.SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:elevation="5dp"
            android:background="#006837">

            <ImageView
                android:layout_marginLeft="10dp"
                android:layout_width="90dp"
                android:layout_height="match_parent"
                android:src="@mipmap/ic_launcher2"/>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:layout_gravity="left|center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:text="Large Text"
                        android:textColor="#fff"
                        android:id="@+id/textView19" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#ccc"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="Medium Text"
                        android:id="@+id/textView20" />

                </LinearLayout>
            </FrameLayout>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="#006837"
            android:id="@+id/profile_view_profile_image"/>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:rowCount="10"
            android:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_username"
                android:layout_row="0"
                android:layout_column="0"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/profile_view_username_view_text"
                android:layout_row="0"
                android:layout_column="1"
                android:text="asdasdasdasd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_password"
                android:layout_row="1"
                android:layout_column="0"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/profile_view_password_view_text"
                android:layout_row="1"
                android:layout_column="1"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_first_name"
                android:layout_row="3"
                android:layout_column="0"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/profile_view_first_name_view_text"
                android:layout_row="3"
                android:layout_column="1"
                android:text="asdasdasdasd"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_last_name"
                android:layout_row="4"
                android:layout_column="0"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/profile_view_last_name_view_text"
                android:layout_row="4"
                android:layout_column="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_up_phone_number"
                android:layout_row="5"
                android:layout_column="0"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:paddingRight="10dp"/>

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:id="@+id/profile_view_phone_number_view_text"
                android:layout_row="5"
                android:layout_column="1"
                android:inputType="phone" />
        </GridLayout>

    </LinearLayout>
    </ScrollView>

</LinearLayout>
